<resources>
    <string name="app_name">Alura Trips</string>
    <string name="banner_description">Banner inicial</string>
    <string name="banner_title">Especiais</string>
    <string name="banner_country">Brasil</string>
    <string name="image_place">Imagem do local</string>
    <string name="final_price">Preço final:</string>
    <string name="make_payment">Realizar Pagamento</string>
    <string name="payment_information">Digite as informações do cartão de credito que você deseja usar para o pagamento</string>
    <string name="purchase_value">Valor da compra:</string>
    <string name="card_number_hint">Numero do cartão</string>
    <string name="payment_month">MM</string>
    <string name="payment_year">AA</string>
    <string name="payment_cvc">CVC</string>
    <string name="payment_card_name">Nome no cartão</string>
    <string name="finalize_purchase">Finalizar compra</string>
    <string name="mask_only_text">"abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020"</string>
    <string name="banner_detail_purchase">Banner do resumo do pagamento</string>
    <string name="congratulation">Parabéns!</string>
    <string name="successful_purchase">Compra realizada com sucesso :)</string>
    <string name="purchase_detail_information">Confira o resumo da compra:</string>
</resources>